--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,10 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+                "node_modules/apexcharts/dist/apexcharts.min.js"
+
+            ]
           },
           "configurations": {
             "production": {
