--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@angular/platform-browser": "^14.2.1",
     "@angular/platform-browser-dynamic": "^14.2.1",
     "@angular/router": "^14.2.1",
+    "apexcharts": "^3.49.0",
+    "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.30.1",
+    "ng-apexcharts": "^1.7.4",
     "ngx-logger": "^5.0.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
