--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "crypto"
+            ],
             "outputPath": "dist/angular-material-template",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -30,8 +33,7 @@
               "src/styles.css"
             ],
             "scripts": [
-                "node_modules/apexcharts/dist/apexcharts.min.js"
-
+              "node_modules/apexcharts/dist/apexcharts.min.js"
             ]
           },
           "configurations": {
