--- a/package.json
+++ b/package.json
@@ -25,13 +25,20 @@
     "@angular/platform-browser-dynamic": "^14.2.1",
     "@angular/router": "^14.2.1",
     "apexcharts": "^3.49.0",
+    "assert": "^2.1.0",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
     "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.30.1",
     "ng-apexcharts": "^1.7.4",
     "ngx-logger": "^5.0.7",
+    "os-browserify": "^0.3.0",
     "rxjs": "~7.5.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tslib": "^2.3.0",
+    "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13",
     "zone.js": "~0.11.4"
