--- a/angular.json
+++ b/angular.json
@@ -71,15 +71,14 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "proxyConfig": "proxy.conf.json"
-          },
           "configurations": {
             "production": {
-              "browserTarget": "maraffa-FE:build:production"
+              "browserTarget": "maraffa-FE:build:production",
+              "proxyConfig": "proxy.conf.docker.json"
             },
             "development": {
-              "browserTarget": "maraffa-FE:build:development"
+              "browserTarget": "maraffa-FE:build:development",
+              "proxyConfig": "proxy.conf.docker.json"
             }
           },
           "defaultConfiguration": "development"
