--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --configuration=development",
+    "debug": "ng serve --configuration=production",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "lint": "ng lint",
