--- a/.github/ISSUE_TEMPLATE/.github/workflows/NodeJS.yml
+++ b/.github/ISSUE_TEMPLATE/.github/workflows/NodeJS.yml
@@ -36,8 +36,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run install
       uses: borales/actions-yarn@v3
-      #with:
-        #cmd: install # will run `yarn install` command
+      with:
+        cmd: install # will run `yarn install` command
     - name: Make a cache
       uses: actions/cache@v2
       id: restore-build
