--- a/.github/workflows/NodeJS.yml
+++ b/.github/workflows/NodeJS.yml
@@ -76,8 +76,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.CHANGELOG }}
+        #with:
+          #token: ${{ secrets.CHANGELOG }}
       - name: Set project name
         run: echo "REPOSITORY_NAME=maraffa-FE" >> $GITHUB_ENV
       - name: lowercase github.repository
