--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,8 @@ server {
         proxy_pass "http://${API_HOST}:${API_PORT}/";
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_set_header Connection 'upgrade, keep-alive';
+        proxy_set_header Keep-Alive 'timeout=5, max=100';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
