feat: socket.io client

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,6 +20,17 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    # location /socket/ {
+    #     # rewrite /socket/(.*) /$1  break;
+    #     proxy_pass "ws://${API_HOST}:${API_PORT}/DIO";
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection 'upgrade, keep-alive';
+    #     proxy_set_header Keep-Alive 'timeout=5, max=100';
+    #     proxy_set_header Host $host;
+    #     proxy_cache_bypass $http_upgrade;
+    # }
+
     # log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                   '$status $body_bytes_sent "$http_referer" '
     #                   '"$http_user_agent" "$http_x_forwarded_for"';
